# manager

./: meson.build
src/: Application.vala  Window.vala  meson.build
src/Widgets/: FolderSideBar.vala  GridViewImage.vala  HeaderBar.vala  ImageAttribView.vala  ImageInfoView.vala  ManagerMainpage.vala  PhotoFolder.vala  ZoomSlider.vala
