executable(
    meson.project_name(),

    'Main.vala',
    'Application.vala',
    'Window.vala',
    'Widgets/HeaderBar.vala',
    'Widgets/ManagerMainpage.vala',
    'Widgets/GridViewImage.vala',
    'Widgets/ImageInfoView.vala',
    'Widgets/PhotoFolder.vala',
    'Widgets/FolderSideBar.vala',
    'Widgets/ZoomSlider.vala',
    'Widgets/ImageAttribView.vala',

    dependencies : dependencies,
    install: true
)
